# modulelib

./: .flake8  README.md  modulelib.py  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
test/: test_module_watchdog.py
